--- a/src/components/login/loginLayout.less
+++ b/src/components/login/loginLayout.less
@@ -1,4 +1,71 @@
-p {
-  color: #fff666;
-  background: #000000;
+div.login-layout {
+  background: @primary;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .login-box {
+    height: auto;
+    background: @sec2;
+    color: @text-sec2;
+    align-self: center;
+    padding: 30px 40px;
+    border-radius: 10px;
+
+    h1 {
+      text-align: center;
+    }
+    h4 {
+      text-align: center;
+    }
+
+    form {
+      margin: 20px 0;
+      .input-group {
+        display: table;
+
+        .input-group-addon {
+          padding: 6px 15px;
+          color: @text-sec4;
+          text-align: center;
+          background-color: @sec4;
+          border-radius: 6px;
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+          border: none;
+          vertical-align: middle;
+          display: table-cell;
+
+        }
+        input {
+          height: 26px;
+          width: 200px;
+          padding: 6px 12px;
+          border: 1px solid @sec4;
+          border-radius: 6px;
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .2);
+        }
+      }
+      .btn-success {
+        i {
+          margin-right: 5px;
+        }
+        background: @sec1;
+        color: @text-sec1;
+        padding: 10px 15px;
+        border-radius: 4px;
+        border: none;
+        font-size: 16px;
+        margin: 5px 0;
+        float: right;
+        cursor: pointer;
+        &:hover{
+          color: @text-sec2;
+        }
+      }
+    }
+
+  }
 }
