--- a/src/main.less
+++ b/src/main.less
@@ -38,6 +38,16 @@ html {
         }
       }
 
+      .modalWrapper{
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 1000;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+      }
+
       @import "./channelsLayout";
     }
   }
