--- a/src/main.less
+++ b/src/main.less
@@ -39,14 +39,42 @@ html {
       }
 
       .modalWrapper{
-        position: fixed;
-        top:0;
-        left:0;
-        z-index: 1000;
-        width: 100%;
-        height: 100%;
-        background: #fff;
+        //position: fixed;
+        //top:0;
+        //left:0;
+        //z-index: 1000;
+        //width: 100%;
+        //height: 100%;
+        //background: #fff;
+        padding: 20px;
+        background-color: #ccc;
+        width: 400px;
+        margin: auto;
+        text-align: center;
+        border-radius: 4px;
+        height: 200px;
+        color: black;
       }
+
+      /* Animation */
+      .fade-enter {
+        opacity: 0.01;
+      }
+
+      .fade-enter.fade-enter-active {
+        opacity: 1;
+        transition: opacity 1000ms ease-in;
+      }
+
+      .fade-exit {
+        opacity: 1;
+      }
+
+      .fade-exit.fade-exit-active {
+        opacity: 0.01;
+        transition: opacity 800ms ease-in;
+      }
+
 
       @import "./channelsLayout";
     }
