--- a/src/main.less
+++ b/src/main.less
@@ -39,21 +39,21 @@ html {
       }
 
       .modalWrapper{
-        //position: fixed;
-        //top:0;
-        //left:0;
-        //z-index: 1000;
-        //width: 100%;
-        //height: 100%;
-        //background: #fff;
-        padding: 20px;
-        background-color: #ccc;
-        width: 400px;
-        margin: auto;
-        text-align: center;
-        border-radius: 4px;
-        height: 200px;
-        color: black;
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 1000;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        //padding: 20px;
+        //background-color: #ccc;
+        //width: 400px;
+        //margin: auto;
+        //text-align: center;
+        //border-radius: 4px;
+        //height: 200px;
+        //color: black;
       }
 
       /* Animation */
