--- a/src/main.less
+++ b/src/main.less
@@ -38,6 +38,49 @@ html {
         }
       }
 
+      .savingSpinner {
+        width: 40px;
+        height: 40px;
+
+        position: relative;
+        margin: auto;
+        z-index: 99999;
+
+        .circle1, .circle2 {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          background-color: @sec4;
+          opacity: 0.6;
+          position: absolute;
+          top: 0;
+          left: 0;
+
+          -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+          animation: sk-bounce 2.0s infinite ease-in-out;
+        }
+
+        .circle2 {
+          -webkit-animation-delay: -1.0s;
+          animation-delay: -1.0s;
+        }
+
+        @-webkit-keyframes sk-bounce {
+          0%, 100% { -webkit-transform: scale(0.0) }
+          50% { -webkit-transform: scale(1.0) }
+        }
+
+        @keyframes sk-bounce {
+          0%, 100% {
+            transform: scale(0.0);
+            -webkit-transform: scale(0.0);
+          } 50% {
+              transform: scale(1.0);
+              -webkit-transform: scale(1.0);
+            }
+        }
+      }
+
       .modalWrapper{
         position: fixed;
         top:0;
