--- a/src/main.less
+++ b/src/main.less
@@ -124,6 +124,7 @@ html {
         height: inherit;
         @import "./channelsLayout";
         @import "./loginLayout";
+        @import "./profileLayout";
       }
     }
   }
