fetch avatar from api

--- a/src/profileLayout.less
+++ b/src/profileLayout.less
@@ -19,4 +19,11 @@ div.profile-layout {
   .alert-warn {
     background: red;
   }
+
+  .avatar-pane-1{
+    img {
+      height: 100px;
+      width: auto;
+    }
+  }
 }
