base connect channes add/edit/del/list to api

--- a/src/main.less
+++ b/src/main.less
@@ -36,6 +36,11 @@ html {
           color: @text-sec2;
           background: @sec2;
         }
+        &:disabled {
+          color: @text-sec2;
+          background: @sec2;
+          cursor: not-allowed;
+        }
       }
 
       .savingSpinner {
