--- a/src/main.less
+++ b/src/main.less
@@ -43,6 +43,14 @@ html {
         }
       }
 
+      a {
+        color: @text-sec1;
+        &:hover {
+          color: @text-sec2;
+          text-decoration: none;
+        }
+      }
+
       .savingSpinner {
         width: 40px;
         height: 40px;
