fix bugs, vote message

--- a/src/channelsLayout.less
+++ b/src/channelsLayout.less
@@ -65,6 +65,7 @@ div.channels-layout {
       .messages {
         overflow-y: scroll;
         .message {
+          border: 1px solid @sec2;
           display: block;
           height: 50px;
           .author{
@@ -73,6 +74,10 @@ div.channels-layout {
           }
           .text {
 
+          }
+          .vote {
+            float: right;
+            margin-top: -50px;
           }
         }
       }
