--- a/src/components/app/profile/profileLayout.less
+++ b/src/components/app/profile/profileLayout.less
@@ -42,51 +42,8 @@ div.profile-layout {
         form {
           align-self: stretch;
           width: 100%;
-          .form-group {
-            display: flex;
-            flex-direction: column;
-            label {
-              font-size: 15px;
-              margin-bottom: 5px;
-              padding-left: 12px;
-              color: @four;
-              &.error {
-                color: @error;
-              }
-              &.success {
-                color: @success;
-              }
-            }
-            input {
-              height: 26px;
-              padding: 6px 12px;
-              border: 1px solid @four;
-              background: @sixt;
-              border-radius: 6px;
-              box-shadow: inset 0 1px 1px rgba(0, 0, 0, .2);
-              &:read-only {
-                background: @sec;
-                cursor: not-allowed;
-              }
-              &:focus {
-                background: @white;
-              }
-              &.error {
-                border-color: @error;
-              }
-              &.success {
-                border-color: @success;
-              }
-            }
-            .error-box {
-              height: 15px;
-              .error-message {
-                color: @error;
-                text-align: right;
-                font-size: 14px;
-              }
-            }
-          }
+
+
           button {
             background: @thrd;
             color: @sixt;
@@ -104,6 +61,8 @@ div.profile-layout {
               background: @success;
             }
             &:disabled {
+              background: @thrd;
+              color: @sixt;
               cursor: not-allowed;
               opacity: 0.7;
               font-size: 16px;
@@ -139,21 +98,5 @@ div.profile-layout {
         }
       }
     }
-  }
-
-  .has-success {
-    background: green;
-  }
-
-  .has-error {
-    background: red ;
-  }
-
-  .alert-info {
-    background: orange;
-  }
-
-  .alert-warn {
-    background: red;
   }
 }
