first test for actions with mock and DI

--- a/src/shared.less
+++ b/src/shared.less
@@ -1,7 +1,7 @@
 a {
-	color: @text-sec1;
+	color: @sec;
 	&:hover {
-		color: @text-sec2;
+		color: @sixt;
 		text-decoration: none;
 	}
 }
@@ -142,6 +142,7 @@ form {
 	background: @prim;
 	padding: 12px 30px;
 	border-radius: 6px;
+	border: 1px solid @four;
 	z-index: 10000;
 
 	&.success {
