--- a/src/components/login/loginLayout.less
+++ b/src/components/login/loginLayout.less
@@ -8,7 +8,7 @@ div.login-layout {
   .login-box {
     height: auto;
     background: @prim;
-    color: @text-sec2;
+    color: @sec;
     align-self: center;
     padding: 30px 70px 50px;
     border-radius: 10px;
