change voting message,not vote for own message, only one vote

--- a/src/components/app/channels/channelsLayout.less
+++ b/src/components/app/channels/channelsLayout.less
@@ -247,8 +247,11 @@ div.channels-layout {
               color: @sec;
               transition: color 0.2s;
               margin: 0 1px;
-              &:hover {
+              &:hover, &.markVoteBtn:hover {
                 color: @prim;
+              }
+              &.markVoteBtn {
+                color: @four;
               }
             }
           }
